[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/SpearLanceEnemy/01.png" type="Texture" id=1]
[ext_resource path="res://Assets/SpearLanceEnemy/04.png" type="Texture" id=2]
[ext_resource path="res://Assets/SpearLanceEnemy/02.png" type="Texture" id=3]
[ext_resource path="res://Assets/SpearLanceEnemy/09.png" type="Texture" id=4]
[ext_resource path="res://Assets/SpearLanceEnemy/07.png" type="Texture" id=5]
[ext_resource path="res://Assets/SpearLanceEnemy/06.png" type="Texture" id=6]
[ext_resource path="res://Assets/SpearLanceEnemy/08.png" type="Texture" id=7]
[ext_resource path="res://Scripts/SpearLanceEnemy.gd" type="Script" id=8]
[ext_resource path="res://Assets/RatEnemy/Rat_Leaping.png" type="Texture" id=9]
[ext_resource path="res://Assets/RatEnemy/Rat_Attacking1Frame1.png" type="Texture" id=10]
[ext_resource path="res://Assets/RatEnemy/Rat_Attacking1Frame3.png" type="Texture" id=11]
[ext_resource path="res://Assets/RatEnemy/Rat_Walking3.png" type="Texture" id=12]
[ext_resource path="res://Assets/RatEnemy/Rat_Walking2.png" type="Texture" id=13]
[ext_resource path="res://Assets/RatEnemy/Rat_Attacking1Frame4.png" type="Texture" id=14]
[ext_resource path="res://Assets/RatEnemy/Rat_Walking1.png" type="Texture" id=15]
[ext_resource path="res://Assets/RatEnemy/Rat_Attacking1Frame2.png" type="Texture" id=16]

[sub_resource type="Animation" id=4]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBoxPivot/Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.06, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -90.0, 180.0, 90.0, 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 180.0, -90.0, 0.0, 90.0, 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, false, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=1]
resource_name = "RunLeft"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "RunRight"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 23.57

[sub_resource type="CircleShape2D" id=7]
radius = 200.0

[sub_resource type="CircleShape2D" id=9]
radius = 50.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 30.85
height = 25.59

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "RatAttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0.204, 0.204 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 15 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "RatAttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.204, 0.204 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 15 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "RatIdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0.204, 0.204 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "RatIdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.204, 0.204 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "RatLeapLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0.204, 0.204 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "RatLeapRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.204, 0.204 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "RatWalkLeft"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0.204, 0.204 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "RatWalkRight"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -0.204, 0.204 ) ]
}

[node name="SpearLanceEnemy" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackLeft = SubResource( 4 )
anims/AttackRight = SubResource( 5 )
anims/Idle = SubResource( 10 )
anims/RESET = SubResource( 2 )
anims/RunLeft = SubResource( 1 )
anims/RunRight = SubResource( 3 )

[node name="HitBoxPivot" type="Position2D" parent="."]
rotation = -1.5708

[node name="Area2D" type="Area2D" parent="HitBoxPivot"]
position = Vector2( -36.593, -8.07 )
collision_layer = 8
collision_mask = 642

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxPivot/Area2D"]
position = Vector2( 1, 1 )
shape = SubResource( 6 )
disabled = true

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 7 )

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 9 )

[node name="re_AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="patrolTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Collisions" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions"]
position = Vector2( -0.085, 7.346 )
shape = SubResource( 11 )

[node name="DebugUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Text" type="RichTextLabel" parent="DebugUI"]
margin_left = -47.0
margin_top = -45.0
margin_right = 44.0
margin_bottom = 47.0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/RatAttackLeft = SubResource( 13 )
anims/RatAttackRight = SubResource( 14 )
anims/RatIdleLeft = SubResource( 15 )
anims/RatIdleRight = SubResource( 16 )
anims/RatLeapLeft = SubResource( 17 )
anims/RatLeapRight = SubResource( 18 )
anims/RatWalkLeft = SubResource( 19 )
anims/RatWalkRight = SubResource( 20 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="Vision" to="." method="_on_Vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_Vision_area_exited"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_AttackRange_area_exited"]
[connection signal="timeout" from="re_AttackTimer" to="." method="_on_re_AttackTimer_timeout"]
[connection signal="timeout" from="patrolTimer" to="." method="_on_patrolTimer_timeout"]
